--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.2.3",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
     "react-js-pagination": "^3.0.3",
     "react-router": "^6.4.4",
